# algolab-2022-solved

./: .gitignore  README.md  algolabVS.sh
exam/: algolab-exam-2023-1.md  algolab-exam-2023-2.md
other-problems/bitmask-cap-assignment/: debug_test_data.txt
potws/02-deck-of-cards/: problem.md
potws/03-san-francisco/: debug_test_dat1.txt
potws/04-the-iron-islands/: problem.md  solution.md
potws/05-tracking/: problem.md
potws/07-octopussy/: problem.md
potws/08-augean-stables/: problem.md
potws/09-knights/: problem.md
potws/10-hand/: problem.md
potws/11-asterix-in-switzerland/: problem.md
potws/11-ceryneian-hind/: problem.md  solution.md
potws/12-rubeus-hagrid/: problem.md  solution.md
potws/13-strikesback/: problem.md  solution.md
potws/14-ludo-bagman/: problem.md  solution.md
potws/potw-06/: 01test.out  CMakeLists.txt  debug_test_data.txt
potws/potw-07/: solution.md
potws/potw-11/: problem.md
potws/potw-12/: problem.md  solution.md
tutorial-slide-problems/linear-separation/: debug_test_data.txt
tutorial-slide-problems/longest-increasing-subsequence/: debug_test_data.txt
tutorial-slide-problems/maximum-flow/: CMakeLists.txt
weekly-problems/01-dominoes/: problem.md
weekly-problems/01-even-matrices/: problem.md  readme.md
weekly-problems/01-even-pairs/: problem.md
weekly-problems/02-beach-bars/: problem.md  solution.md
weekly-problems/02-burning-coins/: problem.md  solution.md
weekly-problems/02-search-snippets/: problem.md  solution.md
weekly-problems/02-the-great-game/: problem.md
weekly-problems/04-hit/: problem.md  (+1 more)
(+142 files in other folders)
